--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -7,7 +7,7 @@
 </div>
 
   <div class="actions">
-    <%= f.submit nil, :class => 'button'%>
+    <%= f.submit nil, :class => 'small button'%>
     <%= link_to 'Cancel', groups_path(@group), :class => 'small button' %>
   </div>
 <% end %>
