--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,7 +4,7 @@
     <%= link_to 'New group', new_group_path(@group), :class => 'small button'%>
   </div>
   <div class="small-4 columns">
-    <div class="content">
+    <div class="panel callout radius">
       <p>You can browse any group, but to create topics, post links and comment, you need to join.</p>
     </div>
   </div>
