--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,13 @@
     <ul class="right">
       <% if user_signed_in? %>
         <li class="divider"></li>
-        <li><%= link_to "Groups", groups_path %></li>
+        <li class="has-dropdown"><%= link_to 'Groups', groups_path %>
+        <ul class="dropdown"><li class="title back js-generated">
+          <% @groups.each do |group| %>
+          <li><%= link_to group.name, groups_path(group) %></li>
+          <% end %>
+        </ul>
+
         <li class="divider"></li>
         <li class="has-dropdown"><%= link_to current_user.name, root_path %>
         <ul class="dropdown"><li class="title back js-generated">
