--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,6 +9,7 @@
       <li><p><%= truncate(topic.description, length: 95) %><p></li>
         <ul class="no-bullet inline-list">
           <li><%= link_to topic.user.name, group_user_path(@group, topic.user), :class => 'tiny button' %></li>
+          <li><span class="label"><%= pluralize(topic.items.count, 'link') %></span></li>
         </ul>
     </ul>
   </div>
