--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
         <li class="has-dropdown"><%= link_to 'Groups', groups_path %>
         <ul class="dropdown"><li class="title back js-generated">
           <% @groups.each do |group| %>
-          <li><%= link_to group.name, groups_path(group) %></li>
+          <li><%= link_to group.name, group_path(group) %></li>
           <% end %>
         </ul>
 
