can't delete group if items + changed brand name

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar">
   <ul class="title-area">
     <li class="name">
-      <h1><%= link_to "Scrap", root_path %></a></h1>
+      <h1><%= link_to "Scrappy.be", root_path %></a></h1>
     </li>
   </ul>
   <section class="top-bar-section">
