--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="small-4 columns">
     <h3>Edit Group</h3>
     <%= render 'form' %>
-    <%= link_to 'Delete', @group, method: :delete, data: { confirm: 'Are you sure you want to delete this group?' } %>
+    <%= link_to 'Delete', @group, method: :delete, data: { confirm: 'Are you sure you want to delete this group?' } if @group.items.nil? %>
   </div>
 </div>
 
