--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-7 columns">
-    <h3>Welcome to Scrap</h3>
+    <h3>Welcome to Scrappy.be</h3>
       <p class="lead">Connect with like minded people to share and discover the links that matter to you.</p>
       <ul class="no-bullet">
         <li><span class="label">1</span>  Start or join a group.</li>
