creating top level index pages

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,3 +22,11 @@ a {
   background-color: #F18D05;
   border-radius: 5px;
 }
+
+.header {
+  background-color: #f1f1f1;
+}
+
+.top-bar {
+  margin-bottom: 0px;
+}
