--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,9 @@
   </head>
 
   <body>
-
     <%= render 'layouts/navigation' %>
 
-    <div class="row">
+    <div class="large-12 columns header">
       <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, id: "flash_#{name}" %>
       <% end %>
