--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,16 +1,19 @@
 <%= render 'groups/header' %>
 
-<div class="row bottom-padding">
-  <div class="small-12 columns">
+<div class="large-12 columns">
+  <div class="large-2 columns">
+    <%= render 'layouts/topics' %>
+  </div>
+
+  <div class="large-10 columns">
     <% @group.items.each do |item| %>
-      <div class="small-4 columns">
+      <div class="large-3 columns">
         <ul class="no-bullet">
           <li><h4><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></h4></li>
           <li><p><%= truncate(item.description, length: 95) %><p></li>
             <ul class="no-bullet inline-list">
               <li><%= link_to 'comments', group_item_path(@group, item) %></li>
               <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
-              <li><%= link_to item.topic.name, group_topic_path(@group, item.topic), :class => 'tiny button' %></li>
             </ul>
           </ul>
       </div>
@@ -21,5 +24,3 @@
     <hr>
     <%= link_to "Back to #{@group.name}", @group %>
   </div>
-
-</div>
