--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,4 @@
+<div class="header">
 <nav class="top-bar">
   <ul class="title-area">
     <li class="name">
@@ -9,12 +10,6 @@
       <% if user_signed_in? %>
         <li class="divider"></li>
       <li class="<%= 'active' if current_page? '/groups' %>"><%= link_to 'Groups', '/groups' %></li>
-      <li class="divider"></li>
-      <li class="<%= 'active' if current_page? '/topics' %>"><%= link_to 'Topics', '/topics' %></li>
-      <li class="divider"></li>
-      <li class="<%= 'active' if current_page? '/items' %>"><%= link_to 'Links', '/items' %></li>
-      <li class="divider"></li>
-      <li class="<%= 'active' if current_page? '/users' %>"><%= link_to 'Members', '/members' %></li>
       <li class="divider"></li>
         <li class="has-dropdown"><%= link_to current_user.name, root_path %>
         <ul class="dropdown"><li class="title back js-generated">
@@ -30,3 +25,4 @@
     </ul>
   </div>
 </nav>
+</div>
