--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -45,7 +45,7 @@ $black: #3B3B3D;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
 
-$body-bg: #f1f1f1;
+$body-bg: #ffffff;
 $body-font-color: $black;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
