--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -19,14 +19,18 @@ a {
 }
 
 .panel.callout {
-  background-color: #F18D05;
   border-radius: 5px;
 }
 
 .header {
-  background-color: #f1f1f1;
+  margin-top: 30px;
 }
 
 .top-bar {
   margin-bottom: 0px;
+}
+
+.highlighted {
+  font-size: 1.3em;
+  margin-left: 7px;
 }
