--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render 'header' %>
 
-<div class="row">
-  <div class="small-4 columns">
+<div class="large-12 columns">
+  <div class="large-4 columns">
     <h3>Edit Group</h3>
     <%= render 'form' %>
     <%= link_to 'Delete', @group, method: :delete, data: { confirm: 'Are you sure you want to delete this group?' } if @group.items.nil? %>
