--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,7 +6,12 @@
     </div>
 
     <div class="large-10 columns">
-      <h4><%= @topic.name %> <small> <em><%= link_to 'Edit', edit_group_topic_path(@group, @topic) if @user.groups.include?(@group) %></em></small></h4>
+      <ul class="inline-list no-bullet">
+        <li><h4><%= @topic.name %> <small> <em><%= link_to 'Edit', edit_group_topic_path(@group, @topic) if @user.groups.include?(@group) %></em></small></h4></li>
+        <li><%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button small' if @user.groups.include?(@group) %></li>
+      </ul>
+    </div>
+    <div class="large-10 columns">
     <% @topic.items.each do |item| %>
       <div class="large-4 columns content">
         <p><%= link_to item.title, item.url %> <small> <em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p>
@@ -20,6 +25,6 @@
     </div>
 
 
-  <div class="small-12">
+  <div class="large-12 columns">
   <%= render 'back' %>
   </div>
