overhaul UI based on feedback

--- a/app/views/items/_back.html.erb
+++ b/app/views/items/_back.html.erb
@@ -1,4 +1,6 @@
-<div class="small-12 columns">
+<div class="row">
+  <div class="small-12 columns">
   <hr>
   <%= link_to 'Back to links', group_items_path(@group) %>
+  </div>
 </div>
