--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,10 +6,16 @@
   </div>
 
   <div class="large-10 columns">
+    <div class="large-12 columns">
+      <ul class="no-bullet inline-list">
+        <li><h4> All links </h4></li>
+        <li><%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button small' if @user.groups.include?(@group) %></li>
+      </ul>
+    </div>
     <% @group.items.each do |item| %>
-      <div class="large-3 columns">
+      <div class="large-3 columns box">
         <ul class="no-bullet">
-          <li><h4><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></h4></li>
+          <li><p><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p></li>
           <li><p><%= truncate(item.description, length: 95) %><p></li>
             <ul class="no-bullet inline-list">
               <li><%= link_to 'comments', group_item_path(@group, item) %></li>
@@ -20,7 +26,9 @@
     <% end %>
   </div>
 
+<div class="row">
   <div class="small-12 columns">
     <hr>
     <%= link_to "Back to #{@group.name}", @group %>
   </div>
+</div>
