--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -34,3 +34,22 @@ a {
   font-size: 1.3em;
   margin-left: 7px;
 }
+
+.panel.callout {
+  background: #f18d05;
+}
+
+.footer {
+  height: 100px;
+  margin: 15px 0 5px 0;
+  background: #f18d05;
+}
+
+ul li p {
+  padding: 0px;
+  margin-bottom: 0.4em;
+}
+
+.box {
+  min-height: 200px;
+}
