--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,31 +1,34 @@
-<%= render 'header' %>
+<%= render 'groups/header' %>
 
-<% if @group.topics.empty? %>
-  <%= render 'empty_message' %>
-<% else %>
+<div class="large-12 columns">
+  <div class="large-2 columns">
+    <%= render 'layouts/topics' %>
+  </div>
 
-<div class="row bottom-padding">
-  <table>
-  <thead>
-    <tr>
-      <th>Links</th>
-      <th width="300">About</th>
-      <th width="100">Comments</th>
-      <th width="150">Topics</th>
-      <th width="150">Members</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @group.items.reverse.each do |item| %>
-    <tr>
-      <td><%= link_to item.title, [@group, item] %></td>
-      <td><%= truncate(item.description, length: 95) %></td>
-      <td class="center"><%= link_to item.comments.count, group_item_path(@group, item) %></td>
-      <td><%= link_to item.topic.name, group_topic_path(@group, item.topic), :class => 'tiny button' %></td>
-      <td><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></td>
-    </tr>
+  <div class="large-10 columns">
+    <div class="large-12 columns">
+      <ul class="no-bullet inline-list">
+        <li><h4> All links </h4></li>
+        <li><%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button small' if @user.groups.include?(@group) %></li>
+      </ul>
+    </div>
+    <% @group.items.each do |item| %>
+      <div class="large-3 columns box">
+        <ul class="no-bullet">
+          <li><p><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p></li>
+          <li><p><%= truncate(item.description, length: 95) %><p></li>
+            <ul class="no-bullet inline-list">
+              <li><%= link_to 'comments', group_item_path(@group, item) %></li>
+              <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
+            </ul>
+          </ul>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<% end %>
+<div class="row">
+  <div class="small-12 columns">
+    <hr>
+    <%= link_to "Back to #{@group.name}", @group %>
+  </div>
+</div>
