--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,9 +1,9 @@
 <%= render 'groups/header' %>
 
-<div class="row bottom-padding">
-  <div class="small-12 columns">
+<div class="row">
+  <div class="large-12 columns">
   <% @group.topics.each do |topic| %>
-  <div class="small-4 columns">
+  <div class="large-4 columns">
     <hr>
     <ul class="no-bullet">
       <li><%= link_to topic.name, group_topic_path(@group, topic), :class => 'button tiny' %><em> x<%= topic.items.count %></em></li>
@@ -13,7 +13,7 @@
   <% end %>
 </div>
 
-  <div class="small-12 columns">
+  <div class="large-12 columns">
     <hr>
     <%= link_to "Back to #{@group.name}", @group %>
   </div>
