--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,13 +13,15 @@
     </div>
     <div class="large-10 columns">
     <% @topic.items.each do |item| %>
-      <div class="large-4 columns content">
-        <p><%= link_to item.title, item.url %> <small> <em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p>
-        <p><%= truncate(item.description, length: 75) %></p>
-        <ul class="no-bullet inline-list">
-          <li><%= link_to 'comments', group_item_path(@group, item) if @user.groups.include?(@group) %></li>
-          <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
-        </ul>
+      <div class="large-3 columns box">
+        <ul class="no-bullet">
+          <li><p><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p></li>
+          <li><p><%= truncate(item.description, length: 95) %><p></li>
+            <ul class="no-bullet inline-list">
+              <li><%= link_to 'comments', group_item_path(@group, item) %></li>
+              <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
+            </ul>
+          </ul>
       </div>
     <% end %>
     </div>
