--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,29 +1,30 @@
-<div class="row">
-<div class="small-12 columns">
-  <div class="small-4 columns">
+<div class="large-12 columns">
+  <div class="large-4">
+    <%= render 'layouts/users' %>
+  </div>
+  <div class="large-4 columns">
     <h2><%= @user.name %></h2>
   </div>
-  <div class="small-8 columns">
-    <div class="small-8 columns">
+  <div class="large-8 columns">
+    <div class="large-8 columns">
       <ul class="no-bullet pull-right">
         <li><span class="label">Created <%= pluralize(@user.topics.count, 'topic') %></span></li>
         <li><span class="label">Posted <%= pluralize(@user.items.count, 'link') %></span></li>
       </ul>
     </div>
-    <div class="small-4 columns">
+    <div class="large-4 columns">
       <ul class="no-bullet pull-right">
         <li><span class="label">Posted <%= pluralize(@user.comments.count, 'comment') %></span></li>
         <li><span class="label">Belongs to <%= pluralize(@user.memberships.count, 'group') %></span></li>
       </ul>
     </div>
   </div>
-</div>
 <hr>
 
     <% if @user.groups.empty? %>
 
     <div class="row bottom-padding">
-      <div class="small-12">
+      <div class="large-12">
         <p class="lead">You haven't joined any groups or posted anything yet.</p>
         <p><%= link_to 'Join a group now', groups_path, :class => 'button' %></p>
       </div>
@@ -33,28 +34,28 @@
 
 <div class ="row bottom-padding">
 
-    <div class="small-3 columns">
+    <div class="large-3 columns">
       <h4> Groups </h4>
       <% @groups.each do |group| %>
       <p><%= link_to group.name, group_path(group) %></p>
     <% end %>
     </div>
 
-    <div class="small-3 columns">
+    <div class="large-3 columns">
       <h4> Topics </h4>
       <% @user.topics.each do |topic| %>
       <p><%= link_to topic.name, group_topic_path(topic.group.slug, topic) %></p>
     <% end %>
     </div>
 
-    <div class="small-3 columns">
+    <div class="large-3 columns">
       <h4> Links </h4>
       <% @user.items.each do |item| %>
       <p class><%= link_to item.title, group_item_path(item.topic.group.slug, item) %></p>
       <% end %>
     </div>
 
-    <div class="small-3 columns">
+    <div class="large-3 columns">
       <h4> Comments </h4>
       <% @user.items.each do |item| %>
       <p><% item.comments.each do |comment| %></p>
