--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,11 @@
     <%= render 'layouts/navigation' %>
 
     <div class="large-12 columns">
+      <div class="large-6 columns">
       <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, id: "flash_#{name}" %>
-      <% end %>
+        <%= content_tag :div, msg, id: "flash_#{name}" %>
+        <% end %>
+      </div>
 
       <%= yield %>
 
