ajax on create topic and item, plus adding more partials

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="small-12 columns">
   <div class="large-2 columns">
-    <%= render 'layouts/users' %>
+    <%= render 'users/users' %>
   </div>
   <div class="large-10 columns">
   <% @group.users.each do |user| %>
