--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="large-12 columns">
   <div class="large-4">
-    <%= render 'layouts/users' %>
+    <%= render 'users/users' %>
   </div>
   <div class="large-4 columns">
     <h2><%= @user.name %></h2>
