--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -2,6 +2,13 @@
   <div class="large-8 columns">
       <h3><%= link_to @group.name, @group %> <small><%= @group.description %></small></h3>
   </div>
+  <div class="large-1 columns">
+    <%= link_to 'Add link', new_group_item_path(@group), :class => 'button small', :remote => 'true' if @user.groups.include?(@group) %>
+  </div>
+  <div class="large-1 columns">
+    <%= link_to 'Members', group_users_path(@group), :class => 'button small' %>
+  </div>
+  <div id="item_form" class="large-4 columns"></div>
   <hr>
 </div>
 
