--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,14 +2,13 @@
 
 <div class="large-12 columns">
   <div class="large-2 columns">
-    <%= render 'layouts/topics' %>
+    <%= render 'topics/topics' %>
   </div>
 
   <div class="large-10 columns">
     <div class="large-12 columns">
       <ul class="no-bullet inline-list">
         <li><h4> All links </h4></li>
-        <li><%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button small' if @user.groups.include?(@group) %></li>
       </ul>
     </div>
     <% @group.items.each do |item| %>
