--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,11 +1,10 @@
 <%= simple_form_for [@group, @item] do |f| %>
 <%= f.error_notification %>
-      <%= f.input :title, label: false, :required => true, :as => :text, :input_html => { placeholder: "Title", :rows => 1, :min => 10, :maxlength => 450 } %>
-      <%= f.input :url, label: false, :required => true, :as => :text, :input_html => { placeholder: "URL", :rows => 1, :maxlength => 450 } %>
+      <%= f.input :title, label: false, :required => true, :input_html => { placeholder: "Title", :min => 10, :maxlength => 450 } %>
+      <%= f.input :url, label: false, :required => true, :input_html => { placeholder: "URL", :maxlength => 450 } %>
       <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 3, :maxlength => 450 } %>
       <%= f.association :topic, :collection => @group.topics, label: false, :required => true %>
       <% f.error :base %>
-
       <%= f.submit nil, :class => 'small button'%>
-      <%= link_to 'Cancel', group_items_path(@group), :class => 'small button' %>
+      <li class='cancel_item button small'>Cancel</li>
 <% end %>
