--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,13 +1,13 @@
 <%= simple_form_for [@group, @topic] do |f| %>
 <%= f.error_notification %>
 <div class="form-inputs">
-  <%= f.input :name, label: false, :required => true, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450 } %>
+  <%= f.input :name, label: false, :required => true, :input_html => { placeholder: "Name", :min => 10, :maxlength => 450 } %>
   <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 5, :maxlength => 450 } %>
   <% f.error :base %>
 </div>
 
   <div class="actions">
     <%= f.submit nil, :class => 'small button'%>
-    <%= link_to 'Cancel', group_topics_path(@group), :class => 'small button' %>
+    <li class='cancel_topic button small'>Cancel</li>
   </div>
 <% end %>
