--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -2,13 +2,12 @@
 
   <div class="large-12 columns">
     <div class="large-2 columns">
-    <%= render 'layouts/topics' %>
+    <%= render 'topics' %>
     </div>
 
     <div class="large-10 columns">
       <ul class="inline-list no-bullet">
         <li><h4><%= @topic.name %> <small> <em><%= link_to 'Edit', edit_group_topic_path(@group, @topic) if @user.groups.include?(@group) %></em></small></h4></li>
-        <li><%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button small' if @user.groups.include?(@group) %></li>
       </ul>
     </div>
     <div class="large-10 columns">
