--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 
 <div class="large-12 columns">
   <div class="large-2 columns">
-    <%= render 'layouts/users' %>
+    <%= render 'users/users' %>
   </div>
 
   <div class="large-10 columns">
     <div class="large-8 columns">
-      <h2><%= @user.name %></h2>
+      <h3><%= @user.name %></h3>
     </div>
     <div class="large-2 columns">
       <ul class="no-bullet">
