--- a/app/views/items/_back.html.erb
+++ b/app/views/items/_back.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-12 columns">
   <hr>
-  <%= link_to 'Back to links', group_items_path(@group) %>
+  <%= link_to 'Back to links', group_path(@group) %>
   </div>
 </div>
