--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'groups/header' %>
 
   <div class="large-12 columns">
-    <div class="large-2 columns">
+    <div class="large-2 columns sidebar">
     <%= render 'topics' %>
     </div>
 
