--- a/app/views/items/new.js.erb
+++ b/app/views/items/new.js.erb
@@ -1,7 +1,7 @@
 $('#item_form').html('<%=j render(:partial => 'form') %>');
 
 var remove_item_form = function () {
-  $('form').remove();
+  $('#new_item').remove();
 };
 
 $('.cancel_item').click(remove_item_form);
