--- a/app/views/topics/_back.html.erb
+++ b/app/views/topics/_back.html.erb
@@ -1,4 +1,2 @@
-<div class="small-12 columns">
   <hr>
-  <%= link_to 'Back to topics', group_topics_path(@group) %>
-</div>
+  <%= link_to "Back to #{@group.name}", @group %>
