--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @group do |f| %>
 <%= f.error_notification %>
 <div class="form-inputs">
-  <%= f.input :name, label: false, :required => true, :as => :text, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450} %>
+  <%= f.input :name, label: false, :required => true, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450} %>
   <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 3, :maxlength => 450 } %>
   <% f.error :base %>
 </div>
