--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,23 @@
-<div class="small-4 columns">
-  <h2>New group</h2>
-  <%= render 'form' %>
+<div class="large-12 columns header">
+  <div class="large-8 columns">
+    <h3> Groups </h3>
+  </div>
+  <div class="large-4 columns">
+    <div class="panel callout radius">
+      <p>You can browse any group, but to create topics, post links and comment, you need to join.</p>
+    </div>
+  </div>
+  <hr>
 </div>
 
-<div class="small-7 columns">
-  <h3>Tip</h3>
-  <p class="lead"> Only create a group if there's people interested, and no other relevant groups already exist. </p>
+<div class="large-12 columns">
+  <div class="small-5 columns">
+    <h4>New group</h4>
+    <%= render 'form' %>
+  </div>
+
+  <div class="small-6 columns">
+    <h4>Tip</h4>
+    <p class="lead"> Only create a group if there's people interested, and no other relevant groups already exist. </p>
+  </div>
 </div>
