--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,12 +1,19 @@
-<%= render 'groups/header' %>
+<div class="large-2 columns">
+  <%= render 'topics/topics' %>
+</div>
 
-<div class="row">
-  <div class="small-4 columns">
-	 <h2>Edit Link</h2>
-	   <%= render 'form' %>
-	   <p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
+<div class="large-10 columns">
+  <%= render 'groups/header' %>
+  <div class="large-12 columns">
+    <div class="small-5 columns">
+	     <h4>Edit Link</h4>
+	     <%= render 'form' %>
+	     <p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
+    </div>
   </div>
-  <%= render 'back' %>
+  <div class="large-12 columns">
+    <%= render 'back' %>
+  </div>
 </div>
 
 
