--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,21 @@
-<%= render 'groups/header' %>
+<div class="large-2 columns">
+  <%= render 'topics/topics' %>
+</div>
 
-<div class="row bottom-padding">
-  <div class="small-12 columns">
-    <h4><%= link_to @item.title, @item.url %> <small><em> <%= link_to 'Edit', edit_group_item_path(@group, @item) if @user.groups.include?(@group) %></em></small></h4>
+<div class="large-10 columns">
+  <%= render 'groups/header' %>
+  <div class="large-12 columns">
+    <h6><%= link_to @item.title, @item.url %> <small><em> <%= link_to 'Edit', edit_group_item_path(@group, @item) if @user.groups.include?(@group) %></em></small></h6>
     <p><%= @item.description %></p>
   </div>
 
-  <div class="small-5 columns">
-    <h4>Comments</h4>
+  <div class="large-5 columns">
+    <h6>Comments</h6>
     <%= render "comments/comments" %>
     <p><%= render "comments/form" if @user.groups.include?(@group) %></p>
   </div>
-  <%= render 'back' %>
+
+  <div class="large-12 columns">
+    <%= render 'back' %>
+  </div>
 </div>
