--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,12 +1,19 @@
-<%= render 'groups/header' %>
+<div class="large-2 columns">
+  <%= render 'topics' %>
+</div>
 
-<div class="row bottom-padding">
-  <div class="small-5 columns">
-	 <h3>Edit Topic</h3>
-	   <%= render 'form' %>
-     <p><%= link_to 'Delete', [@group, @topic], method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } if @topic.items.empty? %></p>
+<div class="large-10 columns">
+  <%= render 'groups/header' %>
+  <div class="large-12 columns">
+    <div class="large-5 columns">
+      <h4>Edit Topic</h4>
+      <%= render 'form' %>
+      <p><%= link_to 'Delete', [@group, @topic], method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } if @topic.items.empty? %></p>
+    </div>
   </div>
-<%= render 'back' %>
+  <div class="large-12 columns">
+    <%= render 'back' %>
+  </div>
 </div>
 
 
